# wimlds_nbdev_template

./: README.md  pyproject.toml  settings.ini
.github/workflows/: main.yml
bert_experiments/: 00_bert_token_classifier.ipynb  index.ipynb
docs/: _config.yml  bert_token_classifier.html  index.html  sidebar.json
docs/_data/: topnav.yml
docs/_data/sidebars/: home_sidebar.yml
wimlds_nbdev_template/: _nbdev.py
wimlds_nbdev_template/bert_experiments/: bert_token_classifier.py
