[tool.poetry]
name = "wimlds_nbdev_template"
version = "0.1.0"
description = ""
authors = ["Adam Kaczmarek"]

[tool.poetry.dependencies]
python = ">=3.6.1"
nbdev = "^1.1.5"
torch = "^1.0.2"
torchvision = "^0.8.1"
pytorch-lightning = "^1.0.8"
jupyter = "^1.0.0"
joblib = "^0.17.0"
lineflow = "^0.6.4"
transformers = "^3.5.1"
setuptools

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
